11 January 2018: Wouter
	- Initial commit for out-of-order processing for TCP and TLS.

9 January 2018: Wouter
	- Log query name for looping module errors.

8 January 2018: Wouter
	- Fix syntax in comment of local alias processing.
	- Fix NSEC3 record that is returned in wildcard replies from
	  auth-zone zones with NSEC3 and wildcards.

7 January 2018: Wouter
	- On FreeBSD warn if systcl settings do not allow server TCP FASTOPEN,
	  and server tcp fastopen is enabled at compile time.
	- Document interaction between the tls-upstream option in the server
	  section and forward-tls-upstream option in the forward-zone sections.
	- Add contrib/unbound-fuzzme.patch from Jacob Hoffman-Andrews,
	  the patch adds a program used for fuzzing.

12 December 2018: Wouter
	- Fix for crash in dns64 module if response is null.

10 December 2018: Wouter
	- Fix config parser memory leaks.
	- ip-ratelimit-factor of 1 allows all traffic through, instead of the
	  previous blocking everything.
	- Fix for FreeBSD port make with dnscrypt and dnstap enabled.
	- Fix #4206: support openssl 1.0.2 for TLS hostname verification,
	  alongside the 1.1.0 and later support that is already there.
	- Fixup openssl 1.0.2 compile

6 December 2018: Wouter
	- Fix dns64 allocation in wrong region for returned internal queries.

3 December 2018: Wouter
	- Fix icon, no ragged edges and nicer resolutions available, for eg.
	  Win 7 and Windows 10 display.
	- cache-max-ttl also defines upperbound of initial TTL in response.

30 November 2018: Wouter
	- Patch for typo in unbound.conf man page.
	- log-tag-queryreply: yes in unbound.conf tags the log-queries and
	  log-replies in the log file for easier log filter maintenance.

29 November 2018: Wouter
	- iana portlist updated.
	- Fix chroot auth-zone fix to remove chroot prefix.
	- tag for 1.8.2rc1, which became 1.8.2 on 4 dec 2018, with icon
	  updated.  Trunk contains 1.8.3 in development.